# football-video-tracker

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  requirments.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/: tracker.py
src/football_analysis/: ball_assigner.py  bbox_utils.py  camera_movement.py  drawing.py  main.py  speed_estimator.py  team_assigning.py  tracker.py  video_utils.py  view_transformer.py
tests/: test_videos.py  tests.py
