[metadata]
name = football_analysis
version = 0.1.0 
description = analysing football clips with yolo 
author = Nikitas Thermos
platforms = unix, linux, win32


[options]
packages=football_analysis
python_requires = >= 3.10
package_dir = =src
install_requires =  
    opencv-python >= 4.0

[options.extras_require]
testing =
    pytest >= 8.0
    pytest-cov >= 6.0
    flake8 >= 7.0
    tox > 4.24

[flake8]
max-line-length = 100