[metadata]
name = football_analysis
version = 0.1.0 
description = analysing football clips with yolo 
author = Nikitas Thermos
platforms = unix, linux, win32


[options]
packages=football_analysis
python_requires = >= 3.10
package_dir = =src
install_requires =  
    opencv-python >= 4.0
    ultralytics >= 8.3.7
    supervision >= 0.25
    numpy >= 2.2 
    scikit-learn >= 1.6

[options.extras_require]
testing =
    pytest >= 8.0
    pytest-cov >= 6.0
    flake8 >= 7.0
    tox > 4.24

